[package]
name = "gmpmee-sys"
version = "0.1.3"
edition = "2024"
rust-version = "1.90"
categories = ["external-ffi-bindings", "mathematics", "no-std"]
description = "Rust FFI bindings for GMPMEE"
documentation = "https://docs.rs/gmpmee-sys"
keywords = ["bignum", "ffi", "gmp", "math", "numerics"]
license = "LGPL-3.0+"
readme = "README.md"
repository = "https://github.com/de-mo/gmpmee-sys"
build = "build.rs"
links = "gmpmee"


[dependencies]
libc = { default-features = false, version = "0.2" }
gmp-mpfr-sys = "1.6"

[target.'cfg(target_os = "windows")'.build-dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_UI_Shell",
]
version = "0.61"

[build-dependencies]
dirs = "6"
cc = "1.2"
fs_extra = "1.3"
