[package]
name = "gmpmee-sys"
version = "0.2.1"
edition = "2024"
rust-version = "1.90"
categories = ["external-ffi-bindings", "mathematics", "no-std"]
description = "Rust FFI bindings for GMPMEE"
documentation = "https://docs.rs/gmpmee-sys"
keywords = ["bignum", "ffi", "gmp", "math", "numerics"]
license = "LGPL-3.0+"
readme = "README.md"
repository = "https://github.com/de-mo/gmpmee-sys"
build = "build.rs"
links = "gmpmee"


[dependencies]
libc = { default-features = false, version = "0.2" }
gmp-mpfr-sys = "1.6"

[build-dependencies]
dirs = "6"
cc = "1.2"
fs_extra = "1.3"
